fix bugs and the backend is secured

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.17",
+    "mongoose-unique-validator": "^2.0.3",
     "nodemon": "^2.0.6"
   }
 }
