--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.17",
     "mongoose-unique-validator": "^2.0.3",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.6"
   }
 }
